# triton-xyz

./: .clang-format  .gitignore  .gitmodules  .pre-commit-config.yaml  AGENTS.md  CMakeLists.txt  LICENSE  README.md  pixi.toml  prompts-repo-triton-xyz-23-commit.md  prompts-repo-triton-xyz-23-plan.md  proton  pyproject.toml  triton_shared.cc  triton_xyz.cc
.agents/loop/: current.md  loop.md  memory.md  state.md  state.template.md  todo.md
.pixi/: config.toml
backend/: compiler.py  driver.py  proton.py
language/xyz/: __init__.py  extension.py  libdevice.py
lib/: CMakeLists.txt
lib/Analysis/: AnalysisAddress.cpp  AnalysisStructured.cpp  CMakeLists.txt  MaskAnalysis.cpp  OpFoldResultUtils.cpp  PtrAnalysis.cpp  PtrExprAnalysis.cpp  UseAnalysis.cpp
lib/AnalysisAddress/: AnalysisAddress.cpp  CMakeLists.txt
lib/AnalysisStructured/: PtrAnalysis.cpp
lib/Conversion/: CMakeLists.txt
lib/Dialect/: CMakeLists.txt
lib/Pipelines/: CMakeLists.txt  TritonToLinalg.cpp  TritonToLinalgTTA.cpp
lib/Tools/: CMakeLists.txt  RegisterTritonSharedDialects.h  triton-shared-lsp.cpp  triton-shared-opt.cpp  triton-xyz-opt.cpp
lib/Tools/triton-shared-opt/: CMakeLists.txt  RegisterTritonSharedDialects.h  triton-shared-opt.cpp
lib/Utils/: Utils.cpp
misc/: triton-shared.hash.txt
proton_xyz/: CMakeLists.txt
proton_xyz/common/include/: Device.h
proton_xyz/csrc/: Proton.cpp
proton_xyz/csrc/include/Profiler/Cpu/: CpuProfiler.h
proton_xyz/csrc/include/Profiler/Cupti/: CuptiProfiler.h
proton_xyz/csrc/include/Profiler/Instrumentation/: InstrumentationProfiler.h
proton_xyz/csrc/include/Profiler/Roctracer/: RoctracerProfiler.h
proton_xyz/csrc/lib/Driver/: Device.cpp
proton_xyz/csrc/lib/Profiler/Cpu/: CpuProfiler.cpp
python/: test  triton  triton_kernels  tutorials
python/examples/: proton_add.py  proton_demo.py  warmup.py
python/tb/: _wrap_api.py  bench.py  debugpy.sh  run.sh
python/tests/: test_libdevice.py  test_ptr.py  test_triton_to_structured.py  test_triton_to_unstructured.py  test_vec_add.py
python/tta-gen/: conftest.py  pytest.sh  pytest_co.sh  pytest_one.sh  pytest_sim.sh  pytest_sim_one.sh  setup.sh  torch_npu.py
python/tta-ut/: conftest.py  patch_active_triton_verifier.sh  pytest.sh  pytest_co.sh  pytest_one.sh  pytest_sim.sh  pytest_sim_one.sh  setup.sh  torch_npu.py
test/: lit.cfg.py
test/Conversion/: analysis-address-snapshot.mlir  convert-triton-ptr-bool-bitcast-to-llvm.mlir  convert-xyz-to-llvm.mlir  normalize-tensor-ptr-order-diagnostics.mlir  normalize-tensor-ptr-order.mlir  reconcile-ptr-casts.mlir  structured-to-memref-diagnostics.mlir  structured-to-memref-unsupported.mlir  structured-to-memref.mlir  triton-arith-to-linalg-scan.mlir  triton-arith-to-linalg-unsupported.mlir  triton-arith-to-linalg.mlir  triton-pids-to-func-args.mlir  triton-ptr-to-memref.mlir  triton-to-linalg-atomic-rmw.mlir  triton-to-linalg-tta-lowering-diagnostics.mlir  triton-to-linalg-tta-lowering.mlir  triton-to-ptr.mlir  triton-to-structured-diagnostics.mlir  triton-to-structured-prepass.mlir  triton-to-structured-unsupported.mlir  triton-to-structured.mlir  triton-to-tta-structured-diagnostics.mlir  triton-to-tta-structured.mlir  triton-to-tta-unstructured-diagnostics.mlir  triton-to-tta-unstructured.mlir  triton-to-unstructured-diagnostics.mlir  triton-to-unstructured-unsupported.mlir  triton-to-unstructured.mlir  triton-unstructured-fallback-diagnostics.mlir  triton-unstructured-fallback-unsupported.mlir  triton-unstructured-fallback.mlir  tta-addr-control-flow.mlir  tta-to-memref-diagnostics.mlir  tta-to-memref.mlir  tta-to-xyz.mlir  unstructured-to-memref-diagnostics.mlir  unstructured-to-memref-unsupported.mlir  unstructured-to-memref.mlir  verify-tta-bridge-eliminated-diagnostics.mlir  (+1 more)
test/Dialect/: triton-address-addr-type-diagnostics.mlir  triton-address-addr-type.mlir  triton-address-bridge-diagnostics.mlir  triton-address-bridge.mlir  triton-address-canonicalize.mlir  triton-address-dialect-diagnostics.mlir  triton-address-dialect.mlir  triton-xyz-diagnostics.mlir  triton-xyz.mlir
test/Proton/: lower-proton-cpu-instrumentation.mlir  proton-to-xyz.mlir
test/e2e/: add.mlir  basic.mlir  (+3 more)
utils/: generate-test-checks.py  lit_run_cmd.sh
(+164 files in other folders)
